# rust-covidstatus-bot

./: Cargo.toml  README.md
src/: main.rs
