[package]
name = "rustbotengine"
version = "0.2.0"
authors = ["naveen <naveendavisv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7.0"
tokio = { version="0.2.21", features = ["full"] }
futures = "0.3.5"
redis= "0.17.0"
hyper = "0.13.7"
serde = {version = "1.0.115",feature = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4",features=["serde"] }
